--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <center>
         <h1>Introduction</h1>
         </center>
-        <img src="https://scontent-atl3-1.xx.fbcdn.net/v/t1.15752-9/456958943_499615469325133_5314756975510434975_n.jpg?stp=dst-jpg_s206x206&_nc_cat=103&ccb=1-7&_nc_sid=0024fc&_nc_eui2=AeEzvqkzwqVTjnSeMleMMIBJXdIiE0P1e8td0iITQ_V7y36cxeyVpCW89lrhgzYGBDYJd5lhpFyq4L1Be1TWLu2G&_nc_ohc=t5XAslwkLy4Q7kNvgHuG0Cy&_nc_ad=z-m&_nc_cid=0&_nc_ht=scontent-atl3-1.xx&_nc_gid=AUdvPBQSVMK81PJ7p5TV6wU&oh=03_Q7cD1QHauAOPTBu87quHg3EE4GycZ6e5Ce-lJu1QOOCmrAPwFg&oe=6701C376"width="150px"height="150px">
+        <img src="https://scontent.fmnl13-1.fna.fbcdn.net/v/t1.15752-9/456958943_499615469325133_5314756975510434975_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=9f807c&_nc_eui2=AeEzvqkzwqVTjnSeMleMMIBJXdIiE0P1e8td0iITQ_V7y36cxeyVpCW89lrhgzYGBDYJd5lhpFyq4L1Be1TWLu2G&_nc_ohc=t5XAslwkLy4Q7kNvgHQfrOo&_nc_ht=scontent.fmnl13-1.fna&_nc_gid=AeSgGJu18uDuAZ3FeyCQCtX&oh=03_Q7cD1QGOy1oVsuH40mwYf-7Z574oFATQpShRoVXaLupefi7rRw&oe=6701C376"width="150px"height="150px">
         <p>FALLARCUNA, John Paul B.</p>
         <h2>ABOUT ME</h2>
         <p>I'm currently studying at Kolehiyo ng Lungsod ng Lipa, taking the Bachelor of Science in Computer Science.</p>
