--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         </center>
         <img src="https://scontent.fmnl13-1.fna.fbcdn.net/v/t1.15752-9/456958943_499615469325133_5314756975510434975_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=9f807c&_nc_eui2=AeEzvqkzwqVTjnSeMleMMIBJXdIiE0P1e8td0iITQ_V7y36cxeyVpCW89lrhgzYGBDYJd5lhpFyq4L1Be1TWLu2G&_nc_ohc=t5XAslwkLy4Q7kNvgHQfrOo&_nc_ht=scontent.fmnl13-1.fna&oh=03_Q7cD1QG8aANYLHDrzU0G4tudK_M4Bj4Asx_t69lcrUGC1WSXbw&oe=6701C376"width="150px"height="150px">
         <p>FALLARCUNA, John Paul B.</p>
+        <p>BSCS 2B Student.</p>
         <h2>ABOUT ME</h2>
         <p>I'm currently studying at Kolehiyo ng Lungsod ng Lipa, taking the Bachelor of Science in Computer Science.</p>
         <p>I'm 20 years old turning 21 years old next year.</p> 
